kubernetes/apps/dev/forgejo/app/httproute.yaml
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Platform Infrastructure
    gethomepage.dev/name: Forgejo
    gethomepage.dev/description: Self-hosted Git service
    gethomepage.dev/icon: https://raw.githubusercontent.com/chaijunkin/dashboard-icons/main/png/forgejo.png
spec:
  hostnames:
    - git.cloudjur.com
  parentRefs:
    # Private endpoint — internal gateway only
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: forgejo-anubis
          port: 8080
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Real-Ip
                value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
      timeouts:
        request: 300s
      # - backendRefs:
      #     # Internal: direct to forgejo
      #     # When going external: switch to forgejo-anubis port 8080
      #     - name: forgejo-http
      #       port: 3000
      #   filters:
      #     - type: RequestHeaderModifier
      #       requestHeaderModifier:
      #         set:
      #           - name: X-Real-Ip
      #             value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
      #   timeouts:
      #     request: 300s
